# bagidea_ai_office

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  bagidea.cmd  build-mac.sh  run-mac.sh
.claude/: settings.json
.e2e-gate/: review.schema.json  run-review.js
cli/: bagidea  bagidea.js
daemon/: constants.js  db.js  hook.js  iconText-overlay.patch.md  liveview.ps1  lock.js  osutil.js  overlay.html  package-lock.json  package.json  perm.js  plugins.js  pluginshub.html  providers.js  registry.default.json  retrieval.js  review-coalesce.js  served.html  server.staged.js  skills.js  toolshub.html  tts-cache.js  watch.html  watchdog-runtime.js  watchdog.js  winlang.js  workflow.html
docs/: 03-world-layout.md  agent-live-status.contract.md  auto-scan-gate.contract.md  browse-add-project.contract.md  codex-review-gate.contract.md  direct-report-back.contract.md  npc-hire.contract.md  orchestrator-compaction.contract.md  per-agent-model-settings.audit.md  per-agent-model-settings.contract.md  per-project-preview-snapshot.contract.md  project-brain.contract.md  publish-public-repo-checklist.md  review-decision-process-feed.contract.md  review-gate-manual-decision.handoff.md  run-persistence.contract.md  task-per-project.contract.md  task-report-pipeline.audit.md  token-usage-panel.contract.md  voice-lines.contract.md  work-summary-modal.contract.md
installer/: install-mac.sh  install.ps1  uninstall.ps1  update.ps1
shell/: Cargo.toml  build.rs
shell/macos/wallpaper_shim/: Cargo.toml
shell/macos/wallpaper_shim/src/: lib.rs
tools/: agent-status-backend-e2e.js  (+39 more)
(+117 files in other folders)
